# appinstaller

./: .gitignore  PKGBUILD  README.md  blunux-installer.desktop  install.sh  make-run-installer.sh  package.json  setup-and-run.sh  uninstall.sh
src/: index.html
src-tauri/: Cargo.toml  build.rs  packages.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
