[package]
name = "blunux-installer"
version = "0.1.0"
description = "Blunux Package Installer"
authors = ["Jaewoo Joung"]
edition = "2021"

[lib]
name = "blunux_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "blunux-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
